package com.attribution.interfaces.dto.stock;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;

@Data
@Builder
@NoArgsConstructor
@AllArgsConstructor
public class PoolMembershipVO {

    private Long poolId;
    private String poolName;
    private String joinedAt;
}
